00_backup/eksdev/core/core-api/core-api-svc-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-api
  namespace: core
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"

spec:
  selector:
    app: core-api
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
