00_backup/eksdev/core/core-api/core-api-gw-vs-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: core-api-gw
  namespace: core
spec:
  selector:
    istio: core-istio-ingressgateway
  servers:
  - hosts:
    - eks-core-api.klsdev.kakaoinsure.net
    - core-api.klsdev.kakaoinsure.net
    port:
      name: http-coreapi
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: core-api-vs
  namespace: core
spec:
  gateways:
  - core-api-gw
  hosts:
  - core-api.core.svc.cluster.local
  - eks-core-api.klsdev.kakaoinsure.net
  - core-api.klsdev.kakaoinsure.net
  http:
    #  - match:
    #    - port: 80
  - route:
    - destination:
        host: core-api.core.svc.cluster.local
          #        port:
          #          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: core-api-dr
  namespace: core
spec:
  host: core-api.core.svc.cluster.local
  trafficPolicy:
    connectionPool:
      http:
        idleTimeout: 50s
      tcp:
        tcpKeepalive:
          interval: 10s
          time: 45s
